styles checked